--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.idea
+*.iml
+*.log
+.metadata
+target
+.project
+.classpath
+.settings
+workspace.xml
+!.gitkeep
